complete car add gui

--- a/week7/demo_exception.ipynb
+++ b/week7/demo_exception.ipynb
@@ -230,16 +230,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "bf38b2e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error creating car: Brand must be string and cannot be empty.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
-    "    car = Car(\"Toyota\", \"Camry\", 2020, 30000)\n",
+    "    brand = input(\"Enter car brand: \")\n",
+    "    model = input(\"Enter car model: \")\n",
+    "    year = int(input(\"Enter car year: \"))\n",
+    "    price = float(input(\"Enter car price: \"))\n",
+    "    car = Car(brand, model, year, price)\n",
     "    print(f\"Car created: {car.brand} {car.model}, Year: {car.year}, Price: {car.price}\")\n",
     "except ValueError as e:\n",
     "    print(f\"Error creating car: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3a9696b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error creating car: Year must be a positive integer.\n",
+      "Car created: HOnda xccc, Year: 2000, Price: 2000000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "invalid = True\n",
+    "while invalid:\n",
+    "    try:\n",
+    "        brand = input(\"Enter car brand: \")\n",
+    "        model = input(\"Enter car model: \")\n",
+    "        year = int(input(\"Enter car year: \"))\n",
+    "        price = float(input(\"Enter car price: \"))\n",
+    "        car = Car(brand, model, year, price)\n",
+    "        print(f\"Car created: {car.brand} {car.model}, Year: {car.year}, Price: {car.price}\")\n",
+    "        invalid = False\n",
+    "    except ValueError as e:\n",
+    "        print(f\"Error creating car: {e}\")"
    ]
   }
  ],
